mapa con los centros de salud de euskadi implementado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@ fertilidad, la práctica clínica se centra en evaluar los factores etiológicos
 la infertilidad masculina (Tabla 1) (6) , que son los factores adquiridos y genéticos.
 
     </string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
