--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="usuario">Usuario</string>
+    <string name="contrasena">Contraseña</string>
+    <string name="login">Iniciar sesión</string>
+    <string name="registrese">O regístrate</string>
+    <string name="aqui">aquí.</string>
+    <string name="desarrolladopor">Desarrollado por Alba y Sara (2020).</string>
 
     <!-- Strings related to menu -->
     <string name="menu_home">Inicio</string>
